# nodyn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: feature.rs  functions.rs  generator.rs  impl_block.rs  lib.rs  main.rs  method_impl.rs  multi_type.rs  nodyn_enum.rs  optional_impl.rs  trait_block.rs  trait_impl.rs  traits.rs  types.rs  variant.rs  vec_wrapper.rs  wrapper_struct.rs
tests/: 01_generate_enum.rs  02_empty_and_type_errors.rs  02_empty_and_type_errors.stderr  03_impl_from.rs  04_impl_try_from.rs  05_into_attribute.rs  06_impl_blocks.rs  07_trait_blocks.rs  08_named_variants.rs  09_type_functions.rs  10_advanced_example.rs  11_vec_wrapper.rs  12_with_copy.rs  run.rs
tests/enum/: basic.rs  custom_variants.rs  from.rs  generics.rs
tests/errors/: double_type.rs  double_type.stderr  invalid_impl.rs  invalid_impl.stderr
tests/features/: into_attribute.rs  introspection.rs  is_as.rs
tests/vec_wrapper/: custom.rs  macro.rs  standard.rs
