[package]
name = "nodyn"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = { version = "1.0.105", features = ["diff"] }
